@@ -172,7 +172,7 @@ enum Cmd {
 	FIRST_COMMAND,
 	SEND_FROM_MEMORY = 0,
 	GET_SERVER_VARIABLE,
-	SET_RESPONSE_HEADER,
+	SET_RESPONSE_HEADERS,
 	GET_LOCAL_PORT,
 	FLUSH,
 	CLOSE,
@@ -190,7 +190,7 @@ enum Cmd {
 static char *cmdNames [] = {
 	"SEND_FROM_MEMORY",
 	"GET_SERVER_VARIABLE",
-	"SET_RESPONSE_HEADER",
+	"SET_RESPONSE_HEADERS",
 	"GET_LOCAL_PORT",
 	"FLUSH",
 	"CLOSE",
